--- a/index.html
+++ b/index.html
@@ -180,12 +180,16 @@
         </div>
       </div>
     </div>
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Homepage</h1>
-        <div class="btn-toolbar mb-2 mb-md-0">
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 imgtop">
+        <div style="display: flex; justify-content: center; align-items: center;">
+          <h1 class="display-2"><b>Rafeiros Felizes</b></h1>
         </div>
-      </div>
+        <h2>Bem-vindo ao Rafeiros Felizes - Onde as Caudas Encontram Alegria!</h2>
+        <p>Na Rafeiros Felizes, acreditamos no poder transformador da ligação entre humanos e animais. 
+          A nossa missão é trazer alegria a ambos os lados da trela, unindo famílias amorosas aos companheiros caninos perfeitos. 
+          Somos mais do que uma plataforma de adoção de cães - somos casamenteiros, unindo corações e patas na busca da felicidade.
+        </p>
+
 
     </main>
   </div>
