--- a/loja.html
+++ b/loja.html
@@ -215,6 +215,8 @@
                 <h5 class="card-title">Osso</h5>
                 <p class="card-text">Osso saboroso para cão</p>
                 <p class="card-text">10,99€</p>
+                <input type="number" class="form-control" value="1" id="quantityInput" min="1">
+                <p></p>
                 <a class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -227,6 +229,8 @@
                 <h5 class="card-title">Cama</h5>
                 <p class="card-text">Cama tamnho grande</p>
                 <p class="card-text">45,99€</p>
+                <input type="number" class="form-control" value="1" id="quantityInput" min="1">
+                <p></p>
                 <a class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -239,6 +243,8 @@
                 <h5 class="card-title">Coleira</h5>
                 <p class="card-text">Coleira couro</p>
                 <p class="card-text">70,50€</p>
+                <input type="number" class="form-control" value="1" id="quantityInput" min="1">
+                <p></p>
                 <a class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -251,6 +257,8 @@
                 <h5 class="card-title">Corda</h5>
                 <p class="card-text">Corda de brincar</p>
                 <p class="card-text">25,99€</p>
+                <input type="number" class="form-control" value="1" id="quantityInput" min="1">
+                <p></p>
                 <a class="btn btn-primary">Comprar</a>
               </div>
             </div>
@@ -263,6 +271,8 @@
                 <h5 class="card-title">Galinha</h5>
                 <p class="card-text">Galinha de brincar</p>
                 <p class="card-text">15,99€</p>
+                <input type="number" class="form-control" value="1" id="quantityInput" min="1">
+                <p></p>
                 <a class="btn btn-primary">Comprar</a>
               </div>
             </div>
