--- a/sobre.html
+++ b/sobre.html
@@ -211,6 +211,13 @@
       
         <div class="row mt-4">
           <div class="col-lg-12">
+            <h2>👨‍💻 A Equipa</h2>
+            <p>Este Projeto foi desenvolvido por Rodrigo Luís, estudante na ESTG no âmbito de uma cadeira curricular de Programação Web - Cliente</p>
+          </div>
+        </div>
+
+        <div class="row mt-4">
+          <div class="col-lg-12">
             <h2>🌟 A Nossa Missão: Trazendo Alegria a Ambos os Lados da Trela</h2>
             <p>A nossa missão é clara: acreditamos no poder transformador da relação entre humanos e animais. Queremos proporcionar alegria tanto aos nossos adotantes quanto aos nossos adoráveis Rafeiros. Cada adoção é um elo especial que une uma família amorosa a um companheiro fiel, criando histórias de felicidade duradoura.</p>
           </div>
