--- a/adotar.html
+++ b/adotar.html
@@ -160,6 +160,12 @@
                 <svg class="bi"><use xlink:href="#file-earmark"/></svg>
                 Sobre nós
               </a>
+              <li class="nav-item">
+                <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <i class="bi bi-clipboard-heart"></i>
+                  Cães para adoção
+                </a>
+              </li>
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center gap-2" href="loja.html">
