--- a/loja.html
+++ b/loja.html
@@ -162,6 +162,12 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link d-flex align-items-center gap-2" href="#">
+                <i class="bi bi-clipboard-heart"></i>
+                Cães para adoção
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link d-flex align-items-center gap-2 active" href="loja.html">
                 <svg class="bi"><use xlink:href="#cart"/></svg>
                 Loja
