--- a/detalhes.html
+++ b/detalhes.html
@@ -150,7 +150,7 @@
         <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="index.html">
+              <a class="nav-link d-flex align-items-center gap-2" aria-current="page" href="index.html">
                 <svg class="bi"><use xlink:href="#house-fill"/></svg>
                 Homepage
               </a>
@@ -162,7 +162,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2" href="caes.html">
+              <a class="nav-link d-flex align-items-center gap-2 active" href="caes.html">
                 <i class="bi bi-clipboard-heart"></i>
                 Cães para adoção
               </a>
