--- a/detalhes.html
+++ b/detalhes.html
@@ -207,11 +207,7 @@
       </div>
     </div>
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-        <div class="dog-details">
-            <h2 id="dog-name"></h2>
-            <img id="dog-image" src="" alt="Dog image">
-            <p id="dog-description"></p>
-        </div>
+        <div id="detalhes"></div>
     </main>
   </div>
 </div>
