--- a/favoritos.html
+++ b/favoritos.html
@@ -207,13 +207,11 @@
       </div>
     </div>
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-        <div style="display: flex; justify-content: center; align-items: center;">
-          <h1 class="display-2"><b>Cães Favoritos</b></h1>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card" id="dataGridBodyFavoritos"></div>
         </div>
-        <h3>Cães que gostou até agora</h3>
-
-
-
+      </div>
     </main>
   </div>
 </div>
