--- a/caes.html
+++ b/caes.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rafeiros Felizes</title>
+    <title>Rafeiros Felizes | Cães</title>
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 
@@ -163,7 +163,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center gap-2 active" href="caes.html">
-                <i class="bi bi-balloon-heart"></i>
+                <i class="bi bi-clipboard-heart"></i>
                 Cães para adoção
               </a>
             </li>
@@ -175,7 +175,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link d-flex align-items-center gap-2" href="adotar.html">
-                <i class="bi bi-clipboard-heart"></i>
+                <i class="bi bi-balloon-heart"></i>
                 Adotar
               </a>
           </li>
@@ -196,22 +196,19 @@
                 Favoritos
               </a>
           </li>
-            <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2" href="#">
-                <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
-                Definições
-              </a>
-            </li>
           </ul>
         </div>
       </div>
     </div>
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card" id="dataGridBody"></div>
+      <div class="album py-5">
+        <div class="container">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="dataGridBody">
+
+            </div>
+          </div>
         </div>
-      </div>
+    
     </main>
   </div>
 </div>
