--- a/contactos.html
+++ b/contactos.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contactos</title>
+    <title>Rafeiros Felizes | Contactos</title>
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 
@@ -150,7 +150,7 @@
         <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" href="index.html">
+              <a class="nav-link d-flex align-items-center gap-2" aria-current="page" href="index.html">
                 <svg class="bi"><use xlink:href="#house-fill"/></svg>
                 Homepage
               </a>
@@ -162,7 +162,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2" href="#">
+              <a class="nav-link d-flex align-items-center gap-2" href="caes.html">
                 <i class="bi bi-clipboard-heart"></i>
                 Cães para adoção
               </a>
@@ -178,13 +178,13 @@
                 <i class="bi bi-balloon-heart"></i>
                 Adotar
               </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link d-flex align-items-center gap-2" href="contactos.html">
-                    <i class="bi bi-telephone"></i>
-                  Contactos
-                </a>
-            </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link d-flex align-items-center gap-2 active" href="contactos.html">
+                <i class="bi bi-telephone"></i>
+              Contactos
+            </a>
+        </li>
           </ul>
 
           <hr class="my-3">
@@ -196,12 +196,6 @@
                 Favoritos
               </a>
           </li>
-            <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2" href="#">
-                <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
-                Definições
-              </a>
-            </li>
           </ul>
         </div>
       </div>
