--- a/detalhes.html
+++ b/detalhes.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rafeiros Felizes</title>
+    <title>Rafeiros Felizes | Detalhes</title>
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 
@@ -196,18 +196,23 @@
                 Favoritos
               </a>
           </li>
-            <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2" href="#">
-                <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
-                Definições
-              </a>
-            </li>
           </ul>
         </div>
       </div>
     </div>
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-        <div id="detalhes"></div>
+    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4" id="adotarMain">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Nome</th>
+            <th scope="col">Idade</th>
+            <th scope="col">Imagem</th>
+            <th scope="col">Descrição</th>
+          </tr>
+        </thead>
+        <tbody id="detalhes"></tbody>
+      </table>
+
     </main>
   </div>
 </div>
