--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sobre Nós</title>
+    <title>Rafeiros Felizes | Sobre Nós</title>
 
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 
@@ -162,7 +162,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2" href="#">
+              <a class="nav-link d-flex align-items-center gap-2" href="caes.html">
                 <i class="bi bi-clipboard-heart"></i>
                 Cães para adoção
               </a>
@@ -196,12 +196,6 @@
                 Favoritos
               </a>
           </li>
-            <li class="nav-item">
-              <a class="nav-link d-flex align-items-center gap-2" href="#">
-                <svg class="bi"><use xlink:href="#gear-wide-connected"/></svg>
-                Definições
-              </a>
-            </li>
           </ul>
         </div>
       </div>
